--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* Color Definitions */
 :root {
-  --tech-red: #dc143c;
+  --tech-red: #960e29;
   --mech-gray: #2e2e2e;
   --glow-gold: #ffd700;
   --purity-white: #f5f5f5;
@@ -18,6 +18,15 @@
   --border-radius: 10px;   /* Rounded corners standard */
   --border-width: 2px;     /* Border width for all content boxes */
   --box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); /* Standard box shadow */
+}
+.noselect {
+  -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Old versions of Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome, Edge, Opera and Firefox */
 }
 /*General Tool*/
 .strikethrough {
@@ -151,6 +160,10 @@ h1, h2, h3, h4 {
   border-radius: 12px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
+.CollageImages:hover {
+  width: 150%;
+  max-height: 500px;
+}
 
 #Omnisiah {
   font-weight: bold;
@@ -159,9 +172,23 @@ h1, h2, h3, h4 {
                -1px -1px 2px rgba(255, 215, 0, 0.5),
                1px -1px 2px rgba(255, 215, 0, 0.5),
                -1px 1px 2px rgba(255, 215, 0, 0.5); /* Subtle 4-direction glow */
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none; /* Safari */
+  -khtml-user-select: none; /* Konqueror HTML */
+  -moz-user-select: none; /* Old versions of Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+  user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome, Edge, Opera and Firefox */
+
 }
 #Omnisiah:hover {
   cursor: pointer;
   transform: scale(1.1); /* Makes it grow a bit when hovered */
+}
+.CollageImages img.expanded {
+  transform: scale(1.8);
+  z-index: 10;
+  transition: transform 0.3s ease;
+  box-shadow: 0 0 12px 4px rgba(255, 215, 0, 0.7); /* optional glow effect */
 }
 
