--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@
   box-shadow: var(--box-shadow);
   max-width: 500px;
   margin: 10px auto;
+  overflow-wrap: anywhere;
 }
 
 /* Specific Adjustments for Content Elements within Content Boxes */
