--- a/style.css
+++ b/style.css
@@ -159,6 +159,8 @@ blockquote {
   font-style: italic;
   color: #2e2e2e;
   box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.15);
+  overflow-x: scroll;
+  max-width: fit-content;
 }
 
 
@@ -170,7 +172,8 @@ code, pre {
   font-family: 'Courier New', monospace;
   font-size: 0.95rem;
   display: block;
-  overflow-x: auto;
+  overflow-x: scroll;
+  max-width: fit-content;
 }
 
 
